--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="https://github.com/partht555" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="mailto:partht555@gmail.com"><i class="fas fa-envelope"></i></a>
                 <a href="tel:6692336169"><i class="fas fa-phone"></i></a>
-                <a href="https://www.linkedin.com/in/parththakre/overlay/1740537477777/single-media-viewer/?profileId=ACoAAD5WWnABOqYppAT7iI4bwEV_U_PrlOeuALY" class="resume-button"><i class="fas fa-file-download"></i> Download Resume</a>
+                <a href="https://media.licdn.com/dms/document/media/v2/D562DAQHnWblNxFl-bQ/profile-treasury-document-pdf-analyzed/B56ZVAHiq.GoAc-/0/1740537475264?e=1741219200&v=beta&t=mEa7Y7h7uncHZkcgBMLITJ3--2d1H366HO8xzhC7ZPs" class="resume-button"><i class="fas fa-file-download"></i> Download Resume</a>
             </div>
     </section>
 
