--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
     </section>
 
-    <section id="contact">
+    <!<section id="contact">
         <h2>Get In Touch</h2>
         <form class="contact-form" id="contactForm">
             <input type="text" name="name" placeholder="Name" required>
@@ -160,7 +160,7 @@
             <textarea name="message" rows="5" placeholder="Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
-    </section>
+    </section> – –>
 
     <footer>
         <p>© 2024 Parth Thakre. All rights reserved.</p>
