--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             <p class="degree">Bachelor of Science in Computer Science and Data Science</p>
             <p class="gpa">GPA: 3.71</p>
             <div class="coursework">
-                <h4>Relevant Coursework:</h4>
-                <ul>
+                <h4>Relevant Coursework: Object-Oriented Programming, Data Structures & Algorithms, Artificial Intelligence, Data Engineering, Statistical Theory, Computer Architecture</h4>
+                <!-- <ul>
                     <li>Object-Oriented Programming</li>
                     <li>Data Structures & Algorithms</li>
                     <li>Artificial Intelligence</li>
                     <li>Data Engineering</li>
                     <li>Statistical Theory</li>
                     <li>Computer Architecture</li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </section>
